--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,30 @@
 .App {
   padding: 0.5em;
   position: relative;
+  z-index: 0;
+}
+
+img {
+  /* turn images to "green-scale" (monochromatic with green hue) */
+  filter: grayscale(100%) sepia(100%) hue-rotate(50deg) contrast(110%) saturate(5) brightness(2);
+  image-rendering: pixelated;
+  position: relative;
+  z-index: -901; /* overlay is at -900, other background effects are at -999 */
+}
+
+i {
+  color:#00cbdd
+}
+
+h4 {
+  color:#0185f8
+}
+
+.textCard {
+  text-align: left;
+  margin: 0.5em;
+  font-size: smaller;
+  flex: 1 1 0px;
 }
 
 .hackScreen_word:hover {
@@ -12,6 +36,20 @@
 .toolbar {
   padding: 10px;
   display: flex;
+
+  > button {
+    margin: 5px;
+  }
+}
+
+.flexRow {
+  display: flex;
+  flex-direction: row;
+}
+
+.flexCol {
+  display: flex;
+  flex-direction: column;
 }
 
 .helpInfo {
@@ -30,6 +68,7 @@
 
 .menuDiv {
   text-align: center;
+  height: 100vh;
 }
 
 .menuItems {
@@ -37,7 +76,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 70vh;
 }
 
 .menuItem {
@@ -49,14 +88,3 @@
   background-color: #00dd0087;
   color: black;
 }
-
-.snowflake {
-  color: rgba(25, 248, 9, 0.483);
-  font-size: 2em;
-  text-shadow: 0 0 1px #000;
-}
-
-@-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}
-@-webkit-keyframes snowflakes-shake{0%,100%{-webkit-transform:translateX(0);transform:translateX(0)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}}
-@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}
-@keyframes snowflakes-shake{0%,100%{transform:translateX(0)}50%{transform:translateX(80px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}.snowflake:nth-of-type(10){left:25%;-webkit-animation-delay:2s,0s;animation-delay:2s,0s}.snowflake:nth-of-type(11){left:65%;-webkit-animation-delay:4s,2.5s;animation-delay:4s,2.5s}
