--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,11 @@ img {
   z-index: -901; /* overlay is at -900, other background effects are at -999 */
 }
 
+.myPic {
+  filter: grayscale(100%) sepia(100%) hue-rotate(50deg) contrast(110%) saturate(2) brightness(1);
+  image-rendering: pixelated;
+}
+
 i {
   color:#00cbdd
 }
